@@ -1,5 +1,17 @@
 2021-06-04  Devin Rousso  <drousso@apple.com>
 
+        Web Inspector: cannot see experimental settings when inspecting `ServiceWorker`
+        https://bugs.webkit.org/show_bug.cgi?id=226666
+
+        Reviewed by Joseph Pecoraro.
+
+        * UserInterface/Views/SettingsTabContentView.js:
+        (WI.SettingsTabContentView.prototype._createExperimentalSettingsView):
+        There are experimental settings that have nothing to do with preview features or CSS. Don't
+        limit the Experimental pane to only if those things exist.
+
+2021-06-04  Devin Rousso  <drousso@apple.com>
+
         Web Inspector: Uncaught Exception: undefined is not an object (evaluating 'InspectorBackend.Enum.Page.ResourceType')
         https://bugs.webkit.org/show_bug.cgi?id=226664
 
